--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -160,18 +160,20 @@ jobs:
     name: Build and test wheels for Windows
     permissions:
       contents: read
-    if: >-
-      ${{ true &&
-          !(startsWith(matrix.os, 'windows-11-arm') &&
-            (matrix.python-version == '3.10' ||
-            matrix.python-version == '3.9' ||
-            matrix.python-version == '3.8')) }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
         os: ["windows-11-arm", "windows-2022"]
+        #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
         python-version: ["3.8", "3.11"]
+        # No early Python versions for windows-11-arm
+        exclude:
+          - os: windows-11-arm
+            python-version: "3.10"
+          - os: windows-11-arm
+            python-version: "3.9"
+          - os: windows-11-arm
+            python-version: "3.8"
     steps:
       - uses: actions/checkout@v4
       # --- Install Python ---
