--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -11,12 +11,18 @@ on:
 env:
   DISABLE_NATIVE_BINARY_TESTS: 0
 
+vars:
+  BUILD_LINUX: false
+  BUILD_WINDOWS: true
+  BUILD_MACOS_INTEL: false
+  BUILD_MACOS_ARM: false
+
 jobs:
   linux:
     name: Build and test wheels for Linux 
     permissions:
       contents: read
-    if: false
+    if: ${{ fromJSON(vars.BUILD_LINUX) }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -71,7 +77,7 @@ jobs:
 
   macos-arm64:
     name: macOS ARM64 (M-series)
-    if: false
+    if: ${{ fromJSON(vars.BUILD_MACOS_ARM) }}
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -115,7 +121,7 @@ jobs:
 
   macos-x86_64:
     name: macOS Intel
-    if: false
+    if: ${{ fromJSON(vars.BUILD_MACOS_INTEL) }}
     runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v4
@@ -160,6 +166,7 @@ jobs:
     name: Build and test wheels for Windows
     permissions:
       contents: read
+    if: ${{ fromJSON(vars.BUILD_WINDOWS) }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -168,6 +175,8 @@ jobs:
         python-version: ["3.8", "3.11"]
         # No early Python versions for windows-11-arm
         exclude:
+          - os: windows-2022
+            python-version: "3.11"
           - os: windows-11-arm
             python-version: "3.10"
           - os: windows-11-arm
@@ -288,7 +297,7 @@ jobs:
           nmake || exit /b 1
 
           .\bunit.exe || exit /b 1
-          rem .\test_integr.exe || exit /b 1
+          .\test_integr.exe || exit /b 1
 
           del /q *.exe NonMetricSpaceLib.lib || exit /b 1
           nmake clean || exit /b 1
