controlled build + test_integration for Windows

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,8 +10,6 @@ on:
 
 env:
   DISABLE_NATIVE_BINARY_TESTS: 0
-
-vars:
   BUILD_LINUX: false
   BUILD_WINDOWS: true
   BUILD_MACOS_INTEL: false
@@ -22,7 +20,7 @@ jobs:
     name: Build and test wheels for Linux 
     permissions:
       contents: read
-    if: ${{ fromJSON(vars.BUILD_LINUX) }}
+    if: ${{ env.BUILD_LINUX == 'true' }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -77,7 +75,7 @@ jobs:
 
   macos-arm64:
     name: macOS ARM64 (M-series)
-    if: ${{ fromJSON(vars.BUILD_MACOS_ARM) }}
+    if: ${{ env.BUILD_MACOS_ARM == 'true' }}
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -121,7 +119,7 @@ jobs:
 
   macos-x86_64:
     name: macOS Intel
-    if: ${{ fromJSON(vars.BUILD_MACOS_INTEL) }}
+    if: ${{ env.BUILD_MACOS_INTEL == 'true' }}
     runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v4
@@ -166,7 +164,7 @@ jobs:
     name: Build and test wheels for Windows
     permissions:
       contents: read
-    if: ${{ fromJSON(vars.BUILD_WINDOWS) }}
+    if: ${{ env.BUILD_WINDOWS == 'true' }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
