--- a/python_bindings/tox.ini
+++ b/python_bindings/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37, py38, py39, py310, py311, py312, py313, py314
+envlist = py37, py38, py39, py310, py311, py312, py313, py314, py315, py316, py317
 
 [testenv]
 commands =
