switching windows to cibuildwheel fix2

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -340,27 +340,22 @@ jobs:
           Set-Location $env:GITHUB_WORKSPACE
 
 
-          # Determine VS installation and initialize proper toolchain
-          Write-Host "Locating Visual Studio..."
-          $vsPath = & vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
-          if (-not $vsPath) { throw "Visual Studio not found!" }
           if ($env:RUNNER_ARCH -eq "ARM64") {
-              Write-Host "Initializing ARM64 Visual Studio environment..."
-              & "$vsPath\VC\Auxiliary\Build\vcvarsall.bat" arm64
               $env:ARCH = "armv8.0"
           } else {
-              Write-Host "Initializing x64 Visual Studio environment..."
-              & "$vsPath\VC\Auxiliary\Build\vcvarsall.bat" x64
               $env:ARCH = "SSE2"
           }
 
           Set-Location python_bindings
           Write-Host "Building wheels from $PWD"
-          if ($env:RUNNER_ARCH -eq "ARM64") {
-              & "$env:PYTHON_ROOT\python.exe" -m cibuildwheel --platform windows --output-dir dist
-          } else {
-              python -m cibuildwheel --platform windows --output-dir dist
-          }
+
+          Write-Host "Initializing Visual Studio toolchain..."
+          $vsPath = & vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
+          if (-not $vsPath) { throw "Visual Studio not found!" }
+          $archArg = if ($env:RUNNER_ARCH -eq "ARM64") { "arm64" } else { "x64" }
+          $pythonExe = if ($env:RUNNER_ARCH -eq "ARM64") { "$env:PYTHON_ROOT\python.exe" } else { "python" }
+          cmd /c """$vsPath\VC\Auxiliary\Build\vcvarsall.bat"" $archArg && $pythonExe -m cibuildwheel --platform windows --output-dir dist"
+
           Get-ChildItem dist\*.whl | ForEach-Object {
               & (Join-Path $env:PYTHON_ROOT "python.exe") -m tox -e "py$pyver" --installpkg $_
           }
