--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   DISABLE_NATIVE_BINARY_TESTS: true
-  BUILD_LINUX: false
+  BUILD_LINUX: true
   BUILD_MACOS_ARM: false
   BUILD_MACOS_INTEL: false
   BUILD_WINDOWS: true
@@ -42,7 +42,8 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-24.04", "ubuntu-24.04-arm"]
-        python-version: ["3.8", "3.13"]
+        python-version: ["3.14"]
+        #python-version: ["3.8", "3.13"]
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
     steps:
       # No need unless we test with extras 
