reverting Python 3.8. After all it's just a warning as of now

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -179,7 +179,6 @@ jobs:
         with:
           name: wheels-${{ matrix.python-version }}-${{ matrix.os}}-${{ runner.arch }}
           path: wheelhouse/*.whl
-
   windows:
     name: Build and test wheels for Windows
     permissions:
@@ -209,8 +208,7 @@ jobs:
       - uses: actions/setup-python@v5
         if: runner.arch != 'ARM64'
         with:
-          # Always install 3.11 because it's needed for cibuildwheel
-          python-version: 3.11
+          python-version: ${{ matrix.python-version }}
           architecture: 'x64'
       # For ARM extra work is needed
       - name: Install Python for ARM64 ourselves + install tox and uv
@@ -221,8 +219,13 @@ jobs:
               # Note we are adding a patch number to the path or else it will fail
               # We can't use 3.11.0 though because it was immature and didn't properly register Python
               # Construct full version with patch suffix
-              $matrixPyVer = "3.11"
-              $pyver = "$matrixPyVer.9"
+              if ("${{ matrix.python-version }}" -eq "3.11") {
+                  # Python 3.11.9 fixes ARM registry bugs
+                  $pyver = "3.11.9"
+              } else {
+                  # For all other versions, default to .0 (e.g., 3.12.0, 3.13.0, etc.)
+                  $pyver = "${{ matrix.python-version }}.0"
+              }
               $url = "https://www.python.org/ftp/python/$pyver/python-$pyver-arm64.exe"
               Write-Host "Downloading ARM64 Python from $url"
               Invoke-WebRequest -Uri $url -OutFile python-installer.exe
@@ -236,6 +239,7 @@ jobs:
               }
               Remove-Item python-installer.exe
 
+              $matrixPyVer = "${{ matrix.python-version }}"   # e.g. "3.11", "3.12"
               $majorMinor = $matrixPyVer -replace '\.', ''     # -> "311", "312", etc.
               $pythonRoot = "C:\Program Files\Python$majorMinor-arm64"
           } else {
@@ -326,7 +330,7 @@ jobs:
           $vsPath = & vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
           if (-not $vsPath) { throw "Visual Studio not found!" }
           $archArg = if ($env:RUNNER_ARCH -eq "ARM64") { "arm64" } else { "x64" }
-          $pythonExe = "$env:PYTHON_ROOT\python.exe"
+          $pythonExe = if ($env:RUNNER_ARCH -eq "ARM64") { "$env:PYTHON_ROOT\python.exe" } else { "python" }
 
           $bat = "$vsPath\VC\Auxiliary\Build\vcvarsall.bat"
           cmd /c "`"$bat`" $archArg && `"$pythonExe`" -m cibuildwheel --platform windows --output-dir dist"
@@ -336,7 +340,6 @@ jobs:
               & (Join-Path $env:PYTHON_ROOT "python.exe") -m tox -e "py$pyver" --installpkg $_
           }
         continue-on-error: false
-
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
