fully switching to github actions (#567)
Build binaries in three operating systems and CPU configurations (Intel and ARM):
WINDOWS : arm, Intel
Linux: arm, Intel
MacOs: m1/m2 (arm), Intel

--- a/python_bindings/tox.ini
+++ b/python_bindings/tox.ini
@@ -1,16 +1,18 @@
 [tox]
-envlist = py27, py35, py36
+envlist = py37, py38, py39, py310, py311, py312, py313, py314, py315, py316, py317
 
 [testenv]
-commands = {envpython} setup.py test
+commands =
+    pytest tests/
 deps =
-    -rrequirements.txt
+    pytest
+    psutil
+    scipy
+    numpy
 
 [testenv:style]
 deps =
-    -rrequirements.txt
     flake8
-
 commands =
     flake8
 
