--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,11 +9,11 @@ on:
     branches: ["**"]
 
 env:
-  DISABLE_NATIVE_BINARY_TESTS: true
-  BUILD_LINUX: false
-  BUILD_MACOS_ARM: false
-  BUILD_MACOS_INTEL: false
-  BUILD_WINDOWS: false
+  DISABLE_NATIVE_BINARY_TESTS: false
+  BUILD_LINUX: true
+  BUILD_MACOS_ARM: true
+  BUILD_MACOS_INTEL: true
+  BUILD_WINDOWS: true
 
 jobs:
   # Add this tiny config job above all build jobs
@@ -42,8 +42,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-24.04", "ubuntu-24.04-arm"]
-        python-version: ["3.14"]
-        #python-version: ["3.8", "3.13"]
+        python-version: ["3.8", "3.14"]
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
     steps:
       # No need unless we test with extras 
@@ -166,7 +165,7 @@ jobs:
       - uses: pypa/cibuildwheel@v2.20.0
         env:
           #CIBW_BUILD: "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
-          CIBW_BUILD: "cp38-* cp313-*"
+          CIBW_BUILD: "cp38-* cp313-* cp314-*"
           CIBW_ARCHS_MACOS: "x86_64"
           CIBW_ENVIRONMENT_MACOS: >
             MACOSX_DEPLOYMENT_TARGET=10.13
@@ -190,7 +189,7 @@ jobs:
       matrix:
         os: ["windows-11-arm", "windows-2022"]
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
-        python-version: ["3.8", "3.11"]
+        python-version: ["3.8", "3.11", "3.14"]
         # No early Python versions for windows-11-arm
         exclude:
           #- os: windows-2022
